[package]
name = "httproxide-h3-quinn"
description = "temporary fork of unreleased h3-quinn crate"
version = "0.0.0"
authors = ["Jean-Christophe BEGUE <jc.begue@pm.me>"]
license = "MIT"
edition = "2018"

[dependencies]
h3 = { package = "httproxide-h3", version = "0.0.0", path = "../h3" }
bytes = "1"
quinn = { version = "0.8.0", default-features = false }
quinn-proto = { version = "0.8.0", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["io"] }

[dev-dependencies]
http = "0.2"
tokio = "1"
